--- a/config.json
+++ b/config.json
@@ -6,47 +6,61 @@
       "description": "Идеален для полноценной утренней зарядки. 20 минут упражнений и 5 минут отдыха между подходами.",
       "workDuration": 1200,
       "breakDuration": 300,
-      "cycles": 4
+      "cycles": 4,
+      "exercises": [
+        {
+          "name": "🔄 Разминка суставов",
+          "description": "Вращайте плечами, локтями, запястьями, коленями и голеностопами по 30 секунд в каждую сторону"
+        },
+        {
+          "name": "💪 Отжимания",
+          "description": "3 подхода по 10-15 раз. Держите спину прямой, опускайтесь до угла 90 градусов в локтях"
+        },
+        {
+          "name": "🏋️ Приседания",
+          "description": "3 подхода по 15-20 раз. Спина прямая, колени не выходят за носки, приседайте до параллели с полом"
+        },
+        {
+          "name": "🧘 Планка",
+          "description": "3 подхода по 30-60 секунд. Тело образует прямую линию, напрягите пресс и ягодицы"
+        }
+      ]
     },
     {
-      "id": "standard_15_3",
-      "name": "Стандартный режим",
-      "description": "Сбалансированный вариант. 15 минут активности и 3 минуты для восстановления дыхания.",
-      "workDuration": 900,
-      "breakDuration": 180,
-      "cycles": 4
-    },
-    {
-      "id": "express_10_2",
+      "id": "express_10_2", 
       "name": "Экспресс-зарядка",
       "description": "Для тех, у кого мало времени. 10 минут интенсивной работы и 2 минуты короткого перерыва.",
       "workDuration": 600,
       "breakDuration": 120,
-      "cycles": 4
-    },
-    {
-      "id": "intensive_45_15",
-      "name": "Интенсивная тренировка",
-      "description": "Для продвинутых пользователей. Длительные периоды нагрузки и отдыха.",
-      "workDuration": 2700,
-      "breakDuration": 900,
-      "cycles": 3
-    },
-    {
-      "id": "beginner_5_5",
-      "name": "Режим для начинающих",
-      "description": "Отлично подходит для старта. Равные интервалы работы и отдыха помогают привыкнуть к ритму.",
-      "workDuration": 300,
-      "breakDuration": 300,
-      "cycles": 5
+      "cycles": 4,
+      "exercises": [
+        {
+          "name": "⚡ Берпи",
+          "description": "Присед → упор лежа → отжимание → прыжок. 3 подхода по 8-12 раз"
+        },
+        {
+          "name": "🚀 Прыжки на месте", 
+          "description": "Прыжки с поднятием рук. 3 подхода по 30 секунд"
+        },
+        {
+          "name": "💨 Бег на месте",
+          "description": "Интенсивный бег с высоким подниманием коленей. 3 подхода по 45 секунд"
+        }
+      ]
     },
     {
       "id": "quick_test",
       "name": "Тестовый режим",
       "description": "Для быстрой проверки работы таймера. 10 секунд работы, 5 секунд отдыха.",
       "workDuration": 10,
-      "breakDuration": 5,
-      "cycles": 2
+      "breakDuration": 5, 
+      "cycles": 2,
+      "exercises": [
+        {
+          "name": "🧪 Тестовое упражнение",
+          "description": "Просто постойте или походите на месте для проверки таймера"
+        }
+      ]
     }
   ]
 }
