--- a/config.json
+++ b/config.json
@@ -3,62 +3,66 @@
     {
       "id": "classic_20_5",
       "name": "Классический режим",
-      "description": "Идеален для полноценной утренней зарядки. 20 минут упражнений и 5 минут отдыха между подходами.",
+      "description": "Полноценная утренняя зарядка для всего тела",
       "workDuration": 1200,
       "breakDuration": 300,
       "cycles": 4,
       "exercises": [
         {
           "name": "🔄 Разминка суставов",
-          "description": "Вращайте плечами, локтями, запястьями, коленями и голеностопами по 30 секунд в каждую сторону"
+          "description": "Вращения головой, плечами, локтями, кистями, тазом, коленями, стопами. По 10 вращений в каждую сторону."
         },
         {
           "name": "💪 Отжимания",
-          "description": "3 подхода по 10-15 раз. Держите спину прямой, опускайтесь до угла 90 градусов в локтях"
+          "description": "Исходное положение - планка. Опускайтесь до угла 90° в локтях, держите спину прямой. 3 подхода по 10-15 раз."
         },
         {
           "name": "🏋️ Приседания",
-          "description": "3 подхода по 15-20 раз. Спина прямая, колени не выходят за носки, приседайте до параллели с полом"
+          "description": "Ноги на ширине плеч, спина прямая. Приседайте до параллели с полом. 3 подхода по 15-20 раз."
         },
         {
           "name": "🧘 Планка",
-          "description": "3 подхода по 30-60 секунд. Тело образует прямую линию, напрягите пресс и ягодицы"
+          "description": "Упор лежа на предплечьях. Держите тело прямо как струна. 3 подхода по 30-60 секунд."
         }
       ]
     },
     {
       "id": "express_10_2", 
       "name": "Экспресс-зарядка",
-      "description": "Для тех, у кого мало времени. 10 минут интенсивной работы и 2 минуты короткого перерыва.",
+      "description": "Быстрая зарядка когда мало времени",
       "workDuration": 600,
       "breakDuration": 120,
       "cycles": 4,
       "exercises": [
         {
           "name": "⚡ Берпи",
-          "description": "Присед → упор лежа → отжимание → прыжок. 3 подхода по 8-12 раз"
+          "description": "Присед → упор лежа → отжимание → прыжок. Отличное упражнение для всего тела. 8-12 повторений."
         },
         {
-          "name": "🚀 Прыжки на месте", 
-          "description": "Прыжки с поднятием рук. 3 подхода по 30 секунд"
+          "name": "🦵 Выпады",
+          "description": "Шаг вперед, оба колена под 90°. Чередуйте ноги. 10-15 повторений на каждую ногу."
         },
         {
-          "name": "💨 Бег на месте",
-          "description": "Интенсивный бег с высоким подниманием коленей. 3 подхода по 45 секунд"
+          "name": "✈️ Супермен",
+          "description": "Лежа на животе, одновременно поднимайте руки и ноги. Укрепляет спину. 12-15 повторений."
+        },
+        {
+          "name": "🚴 Велосипед",
+          "description": "Лежа на спине, крутите педали в воздухе. Работает пресс. 20-30 секунд интенсивно."
         }
       ]
     },
     {
       "id": "quick_test",
-      "name": "Тестовый режим",
-      "description": "Для быстрой проверки работы таймера. 10 секунд работы, 5 секунд отдыха.",
+      "name": "Тестовый режим", 
+      "description": "Для проверки работы таймера",
       "workDuration": 10,
-      "breakDuration": 5, 
+      "breakDuration": 5,
       "cycles": 2,
       "exercises": [
         {
           "name": "🧪 Тестовое упражнение",
-          "description": "Просто постойте или походите на месте для проверки таймера"
+          "description": "Просто походите на месте или сделайте легкую разминку"
         }
       ]
     }
