--- a/config.json
+++ b/config.json
@@ -23,11 +23,19 @@
         {
           "name": "🧘 Планка",
           "description": "Упор лежа на предплечьях. Держите тело прямо как струна. 3 подхода по 30-60 секунд."
+        },
+        {
+          "name": "🦵 Выпады",
+          "description": "Шаг вперед, оба колена под 90°. Чередуйте ноги. 10-15 повторений на каждую ногу."
+        },
+        {
+          "name": "✈️ Супермен",
+          "description": "Лежа на животе, одновременно поднимайте руки и ноги. Укрепляет спину. 12-15 повторений."
         }
       ]
     },
     {
-      "id": "express_10_2", 
+      "id": "express_10_2",
       "name": "Экспресс-зарядка",
       "description": "Быстрая зарядка когда мало времени",
       "workDuration": 600,
@@ -39,30 +47,64 @@
           "description": "Присед → упор лежа → отжимание → прыжок. Отличное упражнение для всего тела. 8-12 повторений."
         },
         {
-          "name": "🦵 Выпады",
-          "description": "Шаг вперед, оба колена под 90°. Чередуйте ноги. 10-15 повторений на каждую ногу."
-        },
-        {
-          "name": "✈️ Супермен",
-          "description": "Лежа на животе, одновременно поднимайте руки и ноги. Укрепляет спину. 12-15 повторений."
-        },
-        {
           "name": "🚴 Велосипед",
           "description": "Лежа на спине, крутите педали в воздухе. Работает пресс. 20-30 секунд интенсивно."
+        },
+        {
+          "name": "💥 Прыжки на месте",
+          "description": "Прыжки с хлопком над головой. Кардио-нагрузка. 30-40 повторений."
+        },
+        {
+          "name": "🦀 Боковая планка",
+          "description": "Упор на локоть и стопы, тело прямое. 20-30 секунд на каждую сторону."
+        }
+      ]
+    },
+    {
+      "id": "beginner_5_5",
+      "name": "Режим для начинающих",
+      "description": "Отлично подходит для старта",
+      "workDuration": 300,
+      "breakDuration": 300,
+      "cycles": 5,
+      "exercises": [
+        {
+          "name": "🤸 Наклоны головы",
+          "description": "Медленные наклоны головы вперед-назад и в стороны. По 5 раз в каждую сторону."
+        },
+        {
+          "name": "👐 Вращения плечами",
+          "description": "Вращения плечами вперед и назад. По 10 вращений в каждую сторону."
+        },
+        {
+          "name": "🦵 Подъем коленей",
+          "description": "Марширование на месте с высоким подъемом коленей. 20-30 повторений."
+        },
+        {
+          "name": "🙆 Наклоны к стопам",
+          "description": "Наклоны вперед, стараясь коснуться стоп. Колени прямые. 10-15 повторений."
+        },
+        {
+          "name": "🏃 Легкий бег на месте",
+          "description": "Бег на месте в спокойном темпе. 1-2 минуты."
         }
       ]
     },
     {
       "id": "quick_test",
-      "name": "Тестовый режим", 
+      "name": "Тестовый режим",
       "description": "Для проверки работы таймера",
       "workDuration": 10,
       "breakDuration": 5,
       "cycles": 2,
       "exercises": [
         {
-          "name": "🧪 Тестовое упражнение",
+          "name": "🧪 Тестовое упражнение 1",
           "description": "Просто походите на месте или сделайте легкую разминку"
+        },
+        {
+          "name": "🧪 Тестовое упражнение 2", 
+          "description": "Сделайте несколько приседаний или наклонов"
         }
       ]
     }
